add functionnality and refactoring...
need an idea to remove timeout

--- a/less/styles.less
+++ b/less/styles.less
@@ -13,3 +13,23 @@
     }
 }
 
+.list{
+    width: 310px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    li {
+        list-style: none;
+        border: 1px solid #CCC;
+        background: #F6F6F6;
+        color: #1C94C4;
+        margin: 5px;
+        padding: 5px;
+        height: 22px;
+        line-height: 1.4em;
+        .handle {
+            cursor: move;
+        }
+    }
+}
