--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,10 +4,8 @@
 		<title>Passport</title>
 		<link rel="stylesheet" type="text/css" href="/css/styles.css">
 
+         <script src="/js/modernizr.custom.62482.js"></script>
 
-		<script src="/js/jquery-1.8.2.js"></script>
-		<script src="/js/jquery.enhance.js"></script>
-		<script src="/js/script.js"></script>
 	</head>
 	<body>
 		<% if (!user) { %>
@@ -31,5 +29,12 @@
 		<% } %>
 		<%- body %>
 		</div>
+
+
+		<script src="/js/jquery-1.8.2.js"></script>
+		<script src="/js/yepnope.1.5.4-min.js"></script>
+		<script src="/js/jquery.enhance.js"></script>
+        <script src="/js/script.js"></script>
+
 	</body>
 </html>
