fix on nav and display rules / users / global

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layout') -%>
-<% if (!user) { %>
+<% if (!user ) { %>
 
 	<h2>Welcome! Please log in.</h2>
 
@@ -16,40 +16,54 @@
 
 <% } else { %>
 
+
 	<h2>Hello, <%= user.username %>.</h2>
-    <% for(var i=0; i<data.length; i++) {%>
-        <div class="box" data-cat="<%= data[i].id %>">
-            <h3><%= data[i].name %></h3>
-            <ul class="sortable list">
-                <% for(var y=0; y<data[i].tools.length; y++) {%>
-                   <li data-id="<%= data[i].tools[y].id %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
-                <% } %>
-            </ul>
-            <form class="addtool">
-                <h4>Add Tool :</h4>
-                <div class="field">
-                    <label for="tool_name_<%= data[i].id %>">Name : </label>
-                    <input name="tool_name" id="tool_name_<%= data[i].id %>" data-id="name" type="text" value=""/>
-                </div>
-                <div class="field">
-                    <label for="tool_url_<%= data[i].id %>">URL or Repo : </label>
-                    <input name="tool_url" id="tool_url_<%= data[i].id %>" data-id="url" type="text" value=""/>
-                </div>
-                <input type="submit"/>
-            </form>
-        </div>
+
+	<% if (view=="user") { %>
+        <% for(var i=0; i<data.length; i++) {%>
+            <div class="box" data-cat="<%= data[i].id %>">
+                <h3><%= data[i].name %></h3>
+                <ul class="sortable list">
+                    <% for(var y=0; y<data[i].tools.length; y++) {%>
+                       <li data-id="<%= data[i].tools[y].id %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
+                    <% } %>
+                </ul>
+                <form class="addtool">
+                    <h4>Add Tool :</h4>
+                    <div class="field">
+                        <label for="tool_name_<%= data[i].id %>">Name : </label>
+                        <input name="tool_name" id="tool_name_<%= data[i].id %>" data-id="name" type="text" value=""/>
+                    </div>
+                    <div class="field">
+                        <label for="tool_url_<%= data[i].id %>">URL or Repo : </label>
+                        <input name="tool_url" id="tool_url_<%= data[i].id %>" data-id="url" type="text" value=""/>
+                    </div>
+                    <input type="submit"/>
+                </form>
+            </div>
+        <% } %>
+
+        <br/>
+        <form class="addcategorie">
+            <h4>Add Categorie</h4>
+            <div class="field">
+                <label for="categorie_name">Name : </label>
+                <input name="categorie_name" id="categorie_name" data-id="name" type="text" value=""/>
+            </div>
+             <input type="submit"/>
+        </form>
+    <% } else { %>
+        <% for(var i=0; i<data.length; i++) {%>
+            <div class="box">
+                <h3><%= data[i].name %></h3>
+                <ul class="list">
+                    <% for(var y=0; y<data[i].tools.length; y++) {%>
+                       <li><span class="handle">&nbsp;&nbsp;</span> <%= data[i].tools[y].name %></li>
+                    <% } %>
+                </ul>
+            </div>
+        <% } %>
     <% } %>
-
-    <br/>
-    <form class="addcategorie">
-        <h4>Add Categorie</h4>
-        <div class="field">
-            <label for="categorie_name">Name : </label>
-            <input name="categorie_name" id="categorie_name" data-id="name" type="text" value=""/>
-        </div>
-         <input type="submit"/>
-    </form>
-
     <div id="resultat"></div>
 <% } %>
 
