--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,10 +20,12 @@
                 <a href="/auth/github">GitHub</a>
 			</p>
 		<% } else { %>
-		<div id="container" class="enhance" data-enhance="connected">
+		<div id="container" <% if (view=="user") { %> class="enhance" data-enhance="connected"<% } %>>
 			<p>
 			<a href="/">Home</a> | 
-			<a href="/account">Account</a> | 
+			<a href="/account">Account</a> |
+			<% if (view=="global" || view==null) { %><a href="/">Your choices</a> | <% } %>
+			<% if (view=="user" || view==null) { %><a href="/palmares">All users results</a> | <% } %>
 			<a href="/logout">Log Out</a>
 			</p>
 		<% } %>
@@ -31,9 +33,9 @@
 		</div>
 
 
-		<script src="/js/jquery-1.8.2.js"></script>
-		<script src="/js/yepnope.1.5.4-min.js"></script>
-		<script src="/js/jquery.enhance.js"></script>
+        <script src="/js/jquery-1.8.2.js"></script>
+        <script src="/js/yepnope.1.5.4-min.js"></script>
+        <script src="/js/jquery.enhance.js"></script>
         <script src="/js/script.js"></script>
 
 	</body>
