--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
             <h3><%= data[i].name %></h3>
             <ul class="list">
                 <% for(var y=0; y<data[i].tools.length; y++) {%>
-                   <li><span class="handle">&nbsp;&nbsp;</span> <%= data[i].tools[y].name %></li>
+                   <li><span class="handle">::</span> <%= data[i].tools[y].name %></li>
                 <% } %>
             </ul>
         </div>
@@ -17,9 +17,10 @@
 <% } else { %>
 
 
-	<h2>Hello, <%= user.username %>.</h2>
+	<h2>Hello, <%= user.username %>. <% if (user.admin) { %>You are logged as admin.<% } %></h2>
 
-	<% if (view=="user") { %>
+	<% if (view=="user" || user.admin) { %>
+
         <% for(var i=0; i<data.length; i++) {%>
             <div class="box" data-cat="<%= data[i].id %>">
                 <h3><%= data[i].name %></h3>
@@ -58,12 +59,17 @@
                 <h3><%= data[i].name %></h3>
                 <ul class="list">
                     <% for(var y=0; y<data[i].tools.length; y++) {%>
-                       <li><span class="handle">&nbsp;&nbsp;</span> <%= data[i].tools[y].name %></li>
+                       <li><span class="handle">::</span> <%= data[i].tools[y].name %></li>
                     <% } %>
                 </ul>
             </div>
         <% } %>
     <% } %>
+
+
+
+
+
     <div id="resultat"></div>
 <% } %>
 
