--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -2,7 +2,7 @@
 <% if (message) { %>
 <p><%= message %></p>
 <% } %>
-<form action="/login" method="post">
+<form action="/admin" method="post">
 	<div>
 	<label>Username:</label>
 	<input type="text" name="username"/><br/>
