--- a/less/styles.less
+++ b/less/styles.less
@@ -28,10 +28,19 @@
         padding: 5px;
         height: 22px;
         line-height: 1.4em;
-        .handle {
-            cursor: move;
+        cursor: default;
+        .handle  {
+            cursor: default;
+            opacity:0;
         }
     }
 }
-
+.connected  .list li .handle {
+    cursor: move;
+    opacity:1;
+}
 #container.admin .handle{ display:none; }
+
+.box.notApproved{
+    color:#ff4500;
+}
