--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 	<% if (view=="user" || user.admin) { %>
 
         <% for(var i=0; i<data.length; i++) {%>
-            <div class="box" data-cat="<%= data[i].id %>">
+            <div class="box <% if (user.admin && data[i].approved === 0) { %>notApproved<% } %>" data-cat="<%= data[i].id %>" >
                 <h3><%= data[i].name %></h3>
                 <ul class="sortable list">
                     <% for(var y=0; y<data[i].tools.length; y++) {%>
