--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,4 +4,4 @@
 .list{width:310px;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}.list li{list-style:none;border:1px solid #CCC;background:#F6F6F6;color:#1C94C4;margin:5px;padding:5px;height:22px;line-height:1.4em;cursor:default;}.list li .handle{cursor:default;opacity:0;}
 .connected .list li .handle{cursor:move;opacity:1;}
 #container.admin .handle{display:none;}
-.box.notApproved{color:#ff4500;}
+.box.notApproved{color:red;}
