--- a/views/cat.ejs
+++ b/views/cat.ejs
@@ -1,23 +1,27 @@
 <% for(var i=0; i<data.length; i++) {%>
     <% if(data[i].id === cat){ %>
-          <h3><%= data[i].name %></h3>
-          <ul class="sortable list">
-              <% for(var y=0; y<data[i].tools.length; y++) {%>
-                 <li data-id="<%= data[i].tools[y].id %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
-              <% } %>
-          </ul>
-          <form class="addtool">
-              <h4>Add Tool :</h4>
-              <div class="field">
-                  <label for="tool_name_<%= data[i].id %>">Name : </label>
-                  <input name="tool_name" id="tool_name_<%= data[i].id %>" data-id="name" type="text" value=""/>
-              </div>
-              <div class="field">
-                  <label for="tool_url_<%= data[i].id %>">URL or Repo : </label>
-                  <input name="tool_url" id="tool_url_<%= data[i].id %>" data-id="url" type="text" value=""/>
-              </div>
-              <input type="submit"/>
-          </form>
+        <div class="box <% if (user.admin && data[i].approved === 0) { %>notApproved<% } %>" data-cat="<%= data[i].id %>" >
+              <h3><%= data[i].name %></h3>
+              <ul class="sortable list">
+                  <% for(var y=0; y<data[i].tools.length; y++) {%>
+                     <li data-id="<%= data[i].tools[y].id %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
+                  <% } %>
+              </ul>
 
+              <% if (!user.admin) { %>
+                  <form class="addtool">
+                      <h4>Add Tool :</h4>
+                      <div class="field">
+                          <label for="tool_name_<%= data[i].id %>">Name : </label>
+                          <input name="tool_name" id="tool_name_<%= data[i].id %>" data-id="name" type="text" value=""/>
+                      </div>
+                      <div class="field">
+                          <label for="tool_url_<%= data[i].id %>">URL or Repo : </label>
+                          <input name="tool_url" id="tool_url_<%= data[i].id %>" data-id="url" type="text" value=""/>
+                      </div>
+                      <input type="submit"/>
+                  </form>
+              <% } %>
+        </div>
     <% } %>
 <% } %>
