--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,9 +5,12 @@
 		<link rel="stylesheet" type="text/css" href="/css/styles.css">
 
         <script src="/js/modernizr.custom.62482.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
 
 	</head>
-	<body>
+	<body class="enhance" data-enhance="socketIO">
+	    <div id="socketMsg"></div>
+	    <div id="socketUsers"></div>
 		<% if (!user) { %>
         <div id="container" class="enhance" data-enhance="notConnected">
 			<p>
@@ -20,7 +23,7 @@
                 <a href="/auth/github">GitHub</a>
 			</p>
 		<% } else { %>
-		<div id="container" <% if (view=="user" && !user.admin) { %> class="enhance connected" data-enhance="connected"<% } %><% if (user.admin) { %> class="enhance admin" data-enhance="admin"<% } %>>
+		<div id="container" <% if (view=="user" && !user.admin) { %> class="enhance connected" data-enhance="connected" data-user-id="<%= user.id %>"<% } %><% if (user.admin) { %> class="enhance admin" data-enhance="admin"<% } %>>
 			<p>
 			<a href="/">Home</a> | 
 			<a href="/account">Account</a> |
@@ -35,6 +38,7 @@
 
         <script src="/js/jquery-1.8.2.js"></script>
         <script src="/js/yepnope.1.5.4-min.js"></script>
+        <script src="/js/jquery.ba-throttle-debounce.min.js"></script>
         <script src="/js/jquery.enhance.js"></script>
         <script src="/js/script.js"></script>
 
