to be refartored hot and cold

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
             <h3><%= data[i].name %></h3>
             <ul class="list">
                 <% for(var y=0; y<data[i].tools.length; y++) {%>
-                   <li class="<%= data[i].tools[y].status %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
+                   <li class="<%= data[i].tools[y].status %> <%= data[i].tools[y].podium %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
                 <% } %>
             </ul>
         </div>
@@ -30,7 +30,7 @@
                 <h3 class="loadingAnchor"><%= data[i].name %><% if (user.admin && data[i].approved === 0) { %> &nbsp;&nbsp;&nbsp;&nbsp;<a href="#">Approve</a><% } %></h3>
                 <ul class="sortable list">
                     <% for(var y=0; y<data[i].tools.length; y++) {%>
-                       <li data-id="<%= data[i].tools[y].id %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
+                       <li data-id="<%= data[i].tools[y].id %>" class="<%= data[i].tools[y].status %> <%= data[i].tools[y].podium %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
                     <% } %>
                 </ul>
                 <% if (!user.admin) { %>
@@ -65,7 +65,7 @@
                 <h3 class="loadingAnchor"><%= data[i].name %></h3>
                 <ul class="list">
                     <% for(var y=0; y<data[i].tools.length; y++) {%>
-                       <li class="<%= data[i].tools[y].status %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
+                       <li class="<%= data[i].tools[y].status %> <%= data[i].tools[y].podium %>"><span class="handle">::</span> <%= data[i].tools[y].name %></li>
                     <% } %>
                 </ul>
             </div>
