--- a/less/styles.less
+++ b/less/styles.less
@@ -1,5 +1,15 @@
 @import "mixins.less";
 
+@font-face{ 
+	font-family: 'MyWebFont';
+	src: url('WebFont.eot');
+	src: url('WebFont.eot?#iefix') format('embedded-opentype'),
+	     url('WebFont.woff') format('woff'),
+	     url('WebFont.ttf') format('truetype'),
+	     url('WebFont.svg#webfont') format('svg');
+}
+
+
 .field{
 
     &.error{
